# pyPackageTemplate

./: .gitignore  LICENSE  README.md  cliff.toml  lefthook.yml  pyproject.toml  release.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  test.yml
mypackage/: __init__.py  greet.py
tests/: greet.py
